--- a/config/packages/sensio_framework_extra.yaml
+++ b/config/packages/sensio_framework_extra.yaml
@@ -1,3 +1,6 @@
 sensio_framework_extra:
     router:
         annotations: false
+
+    #view.listener:
+        #alias: Sensio\Bundle\FrameworkExtraBundle\EventListener\TemplateListener
