--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "symfony/swiftmailer-bundle": "^3.4",
         "symfony/twig-bundle": "^4.4",
         "symfony/validator": "4.4.*",
+        "symfony/web-server-bundle": "4.4.*",
         "symfony/yaml": "4.4.*"
     },
     "require-dev": {
