--- a/config/packages/sensio_framework_extra.yaml
+++ b/config/packages/sensio_framework_extra.yaml
@@ -4,3 +4,7 @@ sensio_framework_extra:
 
     #view.listener:
         #alias: Sensio\Bundle\FrameworkExtraBundle\EventListener\TemplateListener
+
+# bugfix - https://github.com/FriendsOfSymfony/FOSRestBundle/issues/1768
+#sensio_framework_extra.view.listener:
+#    alias: Sensio\Bundle\FrameworkExtraBundle\EventListener\TemplateListener
