--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "symfony/framework-bundle": "4.4.*",
         "symfony/intl": "4.4.*",
         "symfony/orm-pack": "^1.0",
+        "symfony/security": "4.4.*",
         "symfony/swiftmailer-bundle": "^3.4",
         "symfony/twig-bundle": "^4.4",
         "symfony/validator": "4.4.*",
