implement sms service

--- a/.env
+++ b/.env
@@ -34,3 +34,8 @@ DATABASE_URL=postgresql://bordercrossing:3R)<c}LnXSNHUl>@border-crossing-v2.cshz
 # Delivery is disabled by default via "null://localhost"
 MAILER_URL=null://localhost
 ###< symfony/swiftmailer-bundle ###
+
+###> aws/aws-sdk-php-symfony ###
+AWS_KEY=not-a-real-key
+AWS_SECRET=@@not-a-real-secret
+###< aws/aws-sdk-php-symfony ###
