--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "symfony/form": "4.4.*",
         "symfony/framework-bundle": "4.4.*",
         "symfony/intl": "4.4.*",
+        "symfony/maker-bundle": "^1.14",
         "symfony/orm-pack": "^1.0",
         "symfony/security": "4.4.*",
         "symfony/swiftmailer-bundle": "^3.4",
@@ -23,7 +24,6 @@
         "symfony/yaml": "4.4.*"
     },
     "require-dev": {
-        "symfony/maker-bundle": "^1.14"
     },
     "config": {
         "preferred-install": {
