--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "aws/aws-sdk-php-symfony": "^2.2",
         "friendsofsymfony/rest-bundle": "^2.7",
         "jms/serializer-bundle": "^3.5",
+        "nelmio/cors-bundle": "^2.0",
         "sensio/framework-extra-bundle": "^5.5",
         "symfony/console": "4.4.*",
         "symfony/dotenv": "4.4.*",
