--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ APP_SECRET=b94b8e3c260f82519dd66299d3cd0b20
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=postgresql://bordercrossing:3R)<c}LnXSNHUl>@border-crossing-v2.cshzbeslqkba.eu-west-1.rds.amazonaws.com:5432/bordercrossing?serverVersion=11&charset=utf8
+#DATABASE_URL=postgresql://bordercrossing:3R)<c}LnXSNHUl>@border-crossing-v2.cshzbeslqkba.eu-west-1.rds.amazonaws.com:5432/bordercrossing?serverVersion=11&charset=utf8
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
