AWS_REGION was missing.

--- a/.env
+++ b/.env
@@ -44,6 +44,7 @@ MAILER_URL=null://localhost
 ###< symfony/swiftmailer-bundle ###
 
 ###> aws/aws-sdk-php-symfony ###
+AWS_REGION=eu-west-1
 AWS_KEY=not-a-real-key
 AWS_SECRET=@@not-a-real-secret
 ###< aws/aws-sdk-php-symfony ###
