--- a/.env
+++ b/.env
@@ -39,3 +39,8 @@ MAILER_URL=null://localhost
 AWS_KEY=not-a-real-key
 AWS_SECRET=@@not-a-real-secret
 ###< aws/aws-sdk-php-symfony ###
+
+###> nelmio/cors-bundle ###
+#CORS_ALLOW_ORIGIN=^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$
+CORS_ALLOW_ORIGIN=^.*$
+###< nelmio/cors-bundle ###
