--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "aws/aws-sdk-php-symfony": "^2.2",
         "friendsofsymfony/rest-bundle": "^2.7",
         "jms/serializer-bundle": "^3.5",
+        "nelmio/cors-bundle": "^2.0",
         "sensio/framework-extra-bundle": "^5.5",
         "symfony/console": "4.4.*",
         "symfony/dotenv": "4.4.*",
@@ -15,7 +16,6 @@
         "symfony/form": "4.4.*",
         "symfony/framework-bundle": "4.4.*",
         "symfony/intl": "4.4.*",
-        "symfony/maker-bundle": "^1.14",
         "symfony/orm-pack": "^1.0",
         "symfony/security": "4.4.*",
         "symfony/swiftmailer-bundle": "^3.4",
@@ -25,7 +25,8 @@
         "symfony/yaml": "4.4.*"
     },
     "require-dev": {
-        "doctrine/doctrine-fixtures-bundle": "^3.3"
+        "doctrine/doctrine-fixtures-bundle": "^3.3",
+        "symfony/maker-bundle": "^1.14"
     },
     "config": {
         "preferred-install": {
